Menu arreglado, vistas indices faltantes

--- a/ProyectoPINGESO-web/src/main/webapp/JC.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/JC.xhtml
@@ -2,23 +2,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-
-
-
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Help</title>
+        <title>Facelet Title</title>
     </h:head>
-
     <h:body>
         <ui:composition template="./template.xhtml">
             <ui:define name="mid">
-                <p:panel header="Help" >
-                    Help
+                <p:panel header="Jiang-Conrath">
+                    
                 </p:panel>
             </ui:define>
         </ui:composition>
     </h:body>
-
 </html>
+
