--- a/ProyectoPINGESO-web/src/main/webapp/menuGenes.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuGenes.xhtml
@@ -12,7 +12,7 @@
     <h:body>
         <ui:composition template="./template.xhtml">
             <ui:define name="mid">
-                <p:panel header="Genes" style="width: 1120px;height: 500px">
+                <p:panel header="Genes" >
                     <p:lightBox iframe="true" id="lighbox3" width="900px" height="600px">
                         <h:outputLink value="http://geneontology.org" title="Gene Ontology">
                             <p:commandButton value="Go to Gene Ontology" icon="ui-icon-arrow"/>
