--- a/ProyectoPINGESO-web/src/main/webapp/menuHome.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuHome.xhtml
@@ -15,7 +15,7 @@
     <h:body>
         <ui:composition template="./template.xhtml">
             <ui:define name="mid">
-                    <p:carousel numVisible="1" itemStyle="height:470px; width:1120px;" 
+                    <p:carousel numVisible="1" itemStyle="height:380px; max-width:990px;" 
                                 autoPlayInterval="5000" effect="easeInStrong" 
                                 headerText="Information" style="margin-bottom:0" 
                                 circular="true">
@@ -28,12 +28,12 @@
                             </h:panelGrid>
                         </p:tab>
                         <p:tab>
-                            <p:graphicImage alt="CytoScape EM" value="Recursos/img1.png" width="1090px" height="400px"/>
+                            <p:graphicImage alt="CytoScape EM" value="Recursos/img1.png" width="980px" height="350px"/>
                             <br/>
                             <p:link value="Enrichment Map Cytoscape Plugin" href="http://geneontology.org/article/enrichmentmap-cytoscape" target="_blank" style="color: #fdb146; margin-left: 15px"/>
                         </p:tab>
                         <p:tab>
-                            <p:graphicImage  alt="S. aureus Term Enrichment" value="Recursos/img2.jpg" width="1090px" height="400px"/>
+                            <p:graphicImage  alt="S. aureus Term Enrichment" value="Recursos/img2.jpg" width="980px" height="350px"/>
                             <br/>
                             <p:link value="Wisdom of Crowds for Robust Gene Network Inference" href="http://geneontology.org/article/wisdom-crowds-robust-gene-network-inference" target="_blank" style="color: #fdb146; margin-left: 15px"/>
                         </p:tab>
