--- a/ProyectoPINGESO-web/src/main/webapp/WuPalmer.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/WuPalmer.xhtml
@@ -4,14 +4,13 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-
     <h:head>
         <title>Wu-Palmer</title>
     </h:head>
     <h:body>
         <ui:composition template="./template.xhtml">
             <ui:define name="mid">
-                <p:panel header="Wu-Palmer" style="width: 1120px;height: 500px">
+                <p:panel header="Wu-Palmer">
                     <h:form>
                         <p:panelGrid columns="2">
                             <h:outputText value="D1: "/>
@@ -22,9 +21,8 @@
                             <h:inputText value="#{wuPalmerMB.d3}"></h:inputText>
                         </p:panelGrid>
                         <p:commandButton value="Calculate Wu Palmer"  actionListener="#{wuPalmerMB.func_wp()}" update="resultado" />
-
                         <p:panelGrid columns="2">
-                            <h:outputText value="Output: " />
+                            <h:outputText value="Output:" />
                             <h:inputText id="resultado" value="#{wuPalmerMB.wp}"/>
                         </p:panelGrid>
                     </h:form>
