--- a/ProyectoPINGESO-web/src/main/webapp/template.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/template.xhtml
@@ -4,10 +4,11 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h:head>
-        
-        <title></title>
 
+    <h:head id="head" class="head">
+        <ui:insert name="head"> 
+            
+        </ui:insert>
     </h:head>
 
     <h:body>
@@ -44,28 +45,27 @@
                 </p:layoutUnit>
 
 
-                <p:layoutUnit id="left" class="left" position="west" style="min-width: 350px" header="Menu" >
-                    <p:menu toggleable="true" style="width: 320px">
+                <p:layoutUnit id="left" class="left" position="west" style="min-width: 320px" header="Menu" >
+                    <p:menu toggleable="true" tabindex="1" style="width: 290px; height: 380px" >
                         <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                         <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
                         <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
 
-                        <p:submenu  transient="false" label="GO biological indices">
-                            <p:menuitem disabled="false" value="-    Upload" url="http://localhost:8080/ProyectoPINGESO-web/faces/readinput.xhtml" />
-                            <p:menuitem disabled="false" value="- TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
-                            <p:menuitem disabled="true" value="- GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                            <p:menuitem disabled="false" value="- Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
-                            <p:menuitem disabled="true" value="- Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                            <p:menuitem disabled="true" value="- Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                            <p:menuitem disabled="true" value="- Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                            <p:menuitem disabled="true" value="- Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                        <p:submenu  transient="" label="GO biological indices">
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="false" value="-Upload" url="http://localhost:8080/ProyectoPINGESO-web/faces/Upload.xhtml" />
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="false" value="-TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="true" value="-GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/GS2.xhtml" />
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="false" value="-Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="true" value="-Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/LIN.xhtml" />
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="true" value="-Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/LC.xhtml" />
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="true" value="-Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/Resnik.xhtml" />
+                            <p:menuitem style="width: 200px;margin-left: 30px" disabled="true" value="-Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/JC.xhtml" />
                         </p:submenu>
                     </p:menu>
-
                 </p:layoutUnit>
 
 
-                <p:layoutUnit id="mid" class="mid" position="center">
+                <p:layoutUnit  id="mid" class="mid" position="center">
                     <ui:insert name="mid"> </ui:insert>
                 </p:layoutUnit>
 
