ADD: Clase ParTerminos ADD: mbPrueba, el cual llama a la función CoreAPP() Para ejecutar la app deben ir a /faces/downloadXML.xhtml En procesamiento está el nucleo de la aplicación...

--- a/ProyectoPINGESO-web/src/main/webapp/downloadXML.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/downloadXML.xhtml
@@ -11,5 +11,6 @@
         <p:button href="ftp://ftp.geneontology.org/pub/godatabase/archive/go_daily-termdb.rdf-xml.gz" value
                   ="Descargar XML"/>
     </h:body>
+    <h:outputText value="#{mbPrueba.a}"/>
 </html>
 
