--- a/ProyectoPINGESO-web/src/main/webapp/help.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/help.xhtml
@@ -2,19 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
     <h:body>
         <ui:composition template="./template.xhtml">
             <ui:define name="mid">
-                <p:panel header="LIN">
-                    
+                <p:panel header="Help" >
+                    Help
                 </p:panel>
             </ui:define>
         </ui:composition>
     </h:body>
-</html>
 
+</html>
