--- a/ProyectoPINGESO-web/src/main/webapp/template.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/template.xhtml
@@ -21,7 +21,7 @@
                                 <p:panel style="background: #fdb146; min-height: 70px">
                                     <div class="ui-grid-row">
                                         <div class="ui-grid-col">
-                                            <p:graphicImage value="recursos/GO.png" width="30" height="30" style="margin-left: 20px"/>
+                                            <p:graphicImage value="Recursos/GO.png" width="30" height="30" style="margin-left: 20px"/>
                                             <p:outputLabel value="Based on Gene Ontology" style="color: #1f61b2;margin-left: 15px"/>
                                         </div>
                                     </div>
@@ -32,10 +32,10 @@
                                 <p:panel style="background: #1f61b2; min-height: 70px">
                                     <div class="ui-grid-row">
                                         <div class="ui-grid-col-10">
-                                            <p:graphicImage value="recursos/titulo.png" width="450" height="50"/>
+                                            <p:graphicImage value="Recursos/titulo.png" width="450" height="50"/>
                                         </div>
                                         <div class="ui-grid-col-1">
-                                            <p:graphicImage value="recursos/adn.png" width="70" height="50"/>
+                                            <p:graphicImage value="Recursos/adn.png" width="70" height="50"/>
                                         </div>
                                     </div>
                                 </p:panel>
@@ -51,7 +51,7 @@
                             <div class="ui-grid-col-6">
                                 <p:panel style="background: #fdb146; min-height: 80px">
                                     <div class="ui-grid-row">
-                                        <p:graphicImage value="recursos/appsolution.png" width="200" height="50" style="margin-left: 20px"/>
+                                        <p:graphicImage value="Recursos/appsolution.png" width="250" height="50" style="margin-left: 20px"/>
                                     </div>
                                 </p:panel>
                             </div>
@@ -64,7 +64,7 @@
                                             <p:link value="-Go University of Santiago of Chile" href="http://www.usach.cl" target="_blank" style="color: #fdb146; margin-left: 15px"/>
                                         </div>
                                         <div class="ui-grid-col-6">
-                                            <p:graphicImage value="recursos/logoUsach2.png" width="300" height="60" style="margin-left: 10px"/>
+                                            <p:graphicImage value="Recursos/logoUsach2.png" width="300" height="60" style="margin-left: 10px"/>
                                         </div>
                                     </div>
                                 </p:panel>
@@ -74,8 +74,8 @@
                 </p:layoutUnit>
                 
                 
-                <p:layoutUnit id="left" class="left" position="west"  header="Menu" >
-                    <p:menu toggleable="true" >
+                <p:layoutUnit id="left" class="left" position="west" style="min-width: 260px" header="Menu" >
+                    <p:menu style="width: 240px">
                         <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/home.xhtml" />
                         <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/genes.xhtml" ></p:menuitem>
                         <p:menuitem  icon="ui-icon-note" value="Biological indices" url="http://localhost:8080/ProyectoPINGESO-web/faces/indices.xhtml"></p:menuitem>
