--- a/ProyectoPINGESO-web/src/main/webapp/indices.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/indices.xhtml
@@ -23,51 +23,45 @@
                     <br/>
                     <p:separator/>
                     <h:panelGrid columns="2" cellpadding="5" cellspacing="5">
-                        <p:outputLabel for="lista" value="Select Indices:" />
-
-                        <p:selectOneListbox id="lista" style="width: 300px"  value="#{mbIndices.option}">
-                            <f:selectItem itemLabel="TBK" itemValue="TBK" />
-                            <f:selectItem itemLabel="Wu-Palmer" itemValue="WP" />
-                            <f:selectItem itemLabel="Leacock-Chodorow" itemValue="LC" />
-                        </p:selectOneListbox>
-                        <p:commandButton value="Calculate indices" actionListener="#{mbPrueba.init()}" icon="ui-icon-calculator"/>
-                        
+                        <h:form>
+                            <p:commandButton value="Calculate Wu Palmer" actionListener="#{mbIndices.opciones('WP')}" icon="ui-icon-calculator" update="resultado"/>
+                            <br></br>
+                            <p:commandButton value="Calculate T.B.K." actionListener="#{mbIndices.opciones('TBK')}" icon="ui-icon-calculator" update="resultado"/>                          
+                            <br></br>
+                            <p:commandButton value="Calculate Leacock Chodorow" actionListener="#{mbIndices.opciones('LC')}" icon="ui-icon-calculator" update= "resultado" />
+                            <br></br>
+                            <br></br>
+                            <h:outputText value="Output:" />
+                            <br></br>
+                            <h:inputText id="resultado" value="#{mbIndices.outputIndice}" />
+                        </h:form>
                         <p:ajaxStatus style="display:block">
                             <f:facet name="default">
                                 <h:outputText value="Status: StandBy" />
                             </f:facet>
-
                             <f:facet name="start">
                                 <h:outputText value="Status: Procesing..." />
-
                             </f:facet>
-
                             <f:facet name="complete">
                                 <h:outputText value="Status: Completed" />
                             </f:facet>
                         </p:ajaxStatus>
                         <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
-
                         <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
                             <p:graphicImage value="Recursos/ajax-loader.gif" />
                         </p:dialog>
-
                     </h:panelGrid>
                     <p:separator/>
                     <h4>Results</h4>
                     <p:dataTable id="tbl1" value="Result" scrollable="true">
                         <p:column headerText="Cluster">
                         </p:column>
-
                         <p:column headerText="TBK">
                         </p:column>
-
                         <p:column headerText="Wu-Palmer">
                         </p:column>
-
                         <p:column headerText="Leacock-Chodorow">
                         </p:column>
-
                     </p:dataTable>
                 </p:panel>
             </ui:define>
