modificación de bootstrap, LC y agregar nuevo template a vista home2 y wupalmer

--- a/ProyectoPINGESO-web/src/main/webapp/LC.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/LC.xhtml
@@ -8,8 +8,8 @@
         <title>Leacock-Chodorow</title>
     </h:head>
     <h:body>
-        <ui:composition template="./template.xhtml">
-            <ui:define name="mid">
+        <ui:composition template="./template2.xhtml">
+            <ui:define name="cuerpo">
                 <p:panel header="Leacock-Chodorow">
                     <h:form>
                         <p:panelGrid columns="2">
