--- a/ProyectoPINGESO-web/src/main/webapp/indices.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/indices.xhtml
@@ -16,23 +16,23 @@
                     <h:panelGrid columns="2" cellpadding="5" cellspacing="5">
                         <p:fileUpload style="width: 500px" value="#{fileUploadManagedBean.file}" mode="advanced" 
                                       fileUploadListener="#{fileUploadManagedBean.fileUploadListener}" dragDropSupport="false"
-                                      update="msg" sizeLimit="100000000" 
-                                      fileLimit="3" allowTypes="/(\.|\/)(txt|csv)$/">
+                                      update="msg" sizeLimit="10485760" 
+                                      fileLimit="10" allowTypes="/(\.|\/)(txt|csv)$/">
                         </p:fileUpload> 
                     </h:panelGrid>
                     <br/>
                     <h:panelGrid columns="2" cellpadding="5" cellspacing="5">
                         <h:form>
-                            <p:commandButton value="Calculate Wu Palmer" actionListener="#{mbIndices.opciones('WP')}" icon="ui-icon-calculator" update="resultado"/>
+                            <p:commandButton value="Calculate Wu Palmer" actionListener="#{fileUploadManagedBean.calcularIndiceWp()}" icon="ui-icon-calculator" update="resultado"/>
                             <br></br>
-                            <p:commandButton value="Calculate T.B.K." actionListener="#{mbIndices.opciones('TBK')}" icon="ui-icon-calculator" update="resultado"/>                          
+                            <p:commandButton value="Calculate T.B.K." actionListener="#{fileUploadManagedBean.calcularIndiceTBK()}" icon="ui-icon-calculator" update="resultado"/>                          
                             <br></br>
-                            <p:commandButton value="Calculate Leacock Chodorow" actionListener="#{mbIndices.opciones('LC')}" icon="ui-icon-calculator" update= "resultado" />
+                            <p:commandButton value="Calculate Leacock Chodorow" actionListener="#{fileUploadManagedBean.calcularIndiceLC()}" icon="ui-icon-calculator" update= "resultado" />
                             <br></br>
                             <br></br>
                             <h:outputText value="Output:" />
                             <br></br>
-                            <h:inputText id="resultado" value="#{mbIndices.outputIndice}" />
+                            <h:inputText id="resultado" value="#{fileUploadManagedBean.output}" />
                         </h:form>
                         <p:ajaxStatus style="display:block">
                             <f:facet name="default">
