modificación a vistas wupalmer, tbk y leacockchodorow con template 2, modificación de bootstrap para la utilización de jquery directamente de primefaces

--- a/ProyectoPINGESO-web/src/main/webapp/leacockChodorow.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/leacockChodorow.xhtml
@@ -10,8 +10,8 @@
     </h:head>
     <h:body>
 
-        <ui:composition template="./template.xhtml">
-            <ui:define name="mid">
+        <ui:composition template="./template2.xhtml">
+            <ui:define name="cuerpo">
                 <p:panel header="Calculate Leacock Chodorow">
                     <p:growl id="msg" showDetail="true" />
                     <h:panelGrid columns="2" cellpadding="5" cellspacing="5">
