--- a/ProyectoPINGESO-web/src/main/webapp/tbk.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/tbk.xhtml
@@ -9,8 +9,8 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <ui:composition template="./template.xhtml">
-            <ui:define name="mid">
+        <ui:composition template="./template2.xhtml">
+            <ui:define name="cuerpo">
                 <p:panel header="Calculate T.B.K">
                     <p:growl id="msg" showDetail="true" />
                     <h:panelGrid columns="2" cellpadding="5" cellspacing="5">
