vista modelo wupalmer centrado

--- a/ProyectoPINGESO-web/src/main/webapp/wupalmer.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/wupalmer.xhtml
@@ -13,10 +13,11 @@
             <ui:define name="cuerpo">
                 <div class="row">
                     <br/>
-                    <div class="col-lg-6 col-md-4 col-xs-0">
+                    <div class="col-md-2"></div>
+                    <div class="col-lg-8 col-md-4 col-xs-0">
 
                         <!--inicio-->
-                        <h3 style="text-align:center">Wu-Palmer</h3>
+                        <h2 style="text-align:center">Wu-Palmer's Calculator</h2>
                         <hr/>
 
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -106,11 +107,12 @@
                         </h:form>
 
                     </div>
-                    <div class="col-lg-6 col-md-4 col-xs-0">
+                    <!--<div class="col-lg-6 col-md-4 col-xs-0">
 
 
 
-                    </div>    
+                    </div>    -->
+                <div class="col-md-2"></div>
                 </div>
 
             </ui:define>
