imagenes carrousel home2, aboutus, otros en template2

--- a/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
@@ -22,15 +22,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-
-                            <center><img src="Recursos/appsolution.png" /></center>
+                            <center><img src="Recursos/img/foto1.png"/></center>
                             <div class="carousel-caption">
 
                             </div>
                         </div>
                         <div class="item">
-                            <center><img src="Recursos/appsolution.png" style = "text-align:center;"/></center>
-
+                            <center><img src="Recursos/img/appsolution.png"/></center>
                             <div class="carousel-caption">
 
                             </div>
