--- a/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
@@ -63,7 +63,7 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li id="fat-menu" class="dropdown">
-                                    <a id="drop3" href="" class="dropdown-toggle whiteColor" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" style="color:#fff;">
+                                    <a id="drop3" href="aboutus.xhtml" class="dropdown-toggle whiteColor" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" style="color:#fff;">
                                         <span><i class="glyphicon glyphicon-info-sign whiteColor"/></span> About us
                                     </a>
                                 </li>
@@ -91,15 +91,7 @@
 
 
                     
-                    
-
-
-
-
-
-
-
-                    <footer style="border-top:1px #ccc solid">
+                    <footer id="footer" style="border-top:1px #ccc solid">
                         <br/><br/>
                         <p>Universidad de Santiago de Chile</p>
                         <br/><br/>
