Footer linkeo, bloqueo de opciones en dropdown, vistas de páginas en construcción, logo usach footer

--- a/ProyectoPINGESO-web/src/main/webapp/resnik.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/resnik.xhtml
@@ -9,8 +9,8 @@
     <h:body>
         <ui:composition template="./template2.xhtml">
             <ui:define name="cuerpo">
-                Hello from resnik
-            </ui:define>
+                <br/><br/><br/><br/><br/><br/><br/>
+                <center><img src="Recursos/img/const.png" alt=""></img></center>            </ui:define>
         </ui:composition>
 
     </h:body>
