--- a/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/home2.xhtml
@@ -50,7 +50,16 @@
                 <!--Fin decarrusel-->        
 
                 <br/>
-                
+                <div class="well col-lg-12 col-md-4">
+                    <div class="col-lg-6 col-md-4 col-xs-0">
+                        <br/>
+                        <p>Contenido</p>
+                        <br/>
+                    </div>
+                    <div class="col-lg-6 col-md-4 col-xs-0">
+                        
+                    </div>
+                </div>
 
 
 
