Descarga de archivos de salida para uno o más clusters, Generado para los 3 genes creados. Optimización 2 para WuPalmer y T.B.K. ( Si D3==0 ) => Wp & TBK = 0

--- a/ProyectoPINGESO-web/src/main/webapp/leacockChodorow.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/leacockChodorow.xhtml
@@ -6,10 +6,9 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Leacock Chodorow</title>
     </h:head>
     <h:body>
-
         <ui:composition template="./template2.xhtml">
             <ui:define name="cuerpo">
                 <p:panel header="Calculate Leacock Chodorow">
@@ -40,6 +39,9 @@
                     <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
                         <p:graphicImage value="Recursos/ajax-loader.gif" />
                     </p:dialog>
+                    <p:commandButton value="Download Results" ajax="false" >
+                        <p:fileDownload value="#{fileDownloadView.downloadFileLC()}" />
+                    </p:commandButton>
                 </p:panel>
             </ui:define>
         </ui:composition>
