--- a/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/template2.xhtml
@@ -46,13 +46,13 @@
                                         <span class="caret"></span>
                                     </a>
                                     <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="wupalmer.xhtml">Wu Palmer</a></li>
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="tbk.xhtml">T.B.K.</a></li>
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="leacockChodorow.xhtml">Leacock-Chodorow</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="faces/wupalmer.xhtml">Wu Palmer</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="faces/tbk.xhtml">T.B.K.</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="faces/leacockChodorow.xhtml">Leacock-Chodorow</a></li>
                                         <li role="presentation" class="divider"></li>
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="lin.xhtml">Lin</a></li>
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="jiangConrath.xhtml">Jiang-Conrath</a></li>
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="resnik.xhtml">Resnik</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="faces/lin.xhtml">Lin</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="faces/jiangConrath.xhtml">Jiang-Conrath</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="faces/resnik.xhtml">Resnik</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
